--- a/style.scss
+++ b/style.scss
@@ -49,7 +49,7 @@ body {
     grid-column: 2 / span 2;
   }
   nav#primary-nav {
-    grid-row: 1 / span 2;
+    grid-row: 1 / span 3;
     grid-column: 1;
   }
   header#main-header {
@@ -66,9 +66,9 @@ body {
   }
 }
 
-header, main {
-  max-width: map.get($breakpoints, "laptop");
-}
+// header, main {
+//   max-width: map.get($breakpoints, "laptop");
+// }
 
 /* -----------
   TYPOGRAPHY
@@ -79,8 +79,6 @@ h2,
 h3 {
   display: inline-flex;
   font-weight: 500;
-  color: rgba(var(--dark-gray));
-  flex-grow: 1;
 }
 
 h1 {
@@ -107,6 +105,7 @@ h2 > #unread-count {
 h3 {
   font-size: 0.75rem;
   font-family: var(--body);
+  flex-grow: 1;
 }
 
 p {
@@ -164,7 +163,7 @@ span {
 @include responsize("tablet") {
   h1, h2 {
     font-weight: 700;
-    width: 100%;
+    // width: 100%;
     align-items: center;
   }
   p {
@@ -188,6 +187,10 @@ span {
   margin: 0.5rem 0;
 }
 
+header#main-header, main{
+  background-color: transparent;
+}
+
 main {
   display: flex;
   flex-direction: column;
@@ -198,6 +201,7 @@ nav#primary-nav {
   z-index: 2;
   max-width: 300px;
   width: 100%;
+  border: none;
 }
 
 header#main-header {
@@ -205,18 +209,18 @@ header#main-header {
   height: $card-h;
   & > * ~ * {
     border-radius: 0.5rem;
-    margin: auto;
+    margin: auto 0;
   }
 }
 
-h2 > #unread-count {
+#unread-count {
   width: max-content;
   background-color: var(--light-gray);
   padding: 0.15rem 0.5rem 0.15rem 0.15rem;
   border-radius: 1rem;
 }
 
-h2 > #unread-count::before {
+#unread-count::before {
   content: "1";
   display: inline-flex;
   font-weight: 700;
@@ -225,6 +229,16 @@ h2 > #unread-count::before {
   text-align: center;
   margin: 0 0.25rem;
   font-size: 0.75rem;
+}
+
+#greeting {
+  display: flex;
+  flex-grow: 1;
+}
+
+#greeting > h1::after {
+  flex-grow: 1;
+  content: "Inbox";
 }
 
 aside {
@@ -242,18 +256,33 @@ h2, section > :first-child {
 }
 
 @include responsize("tablet"){
+  header#main-header, main{
+    background-color: var(--offwhite);
+  }
+  nav#primary-nav {
+    border-right: 1px solid var(--border);
+  }
   h2, section > :first-child {
-    margin: 1rem 0 0.5rem 0;
+    margin: 1rem 0 0.5rem 1rem;
   }
   #clock {
     height: 18px;
     animation: 1s ease-out 1s 1 fadeIn;
     animation-play-state: running;
   }
-  #greeting {
-    height: $card-h;
-    width: fit-content;
+  #greeting > h1::after {
+    content: "Inbox";
+  }
+  #greeting > * {
     margin-left: 1rem;
+  }
+  #greeting {
+    flex-flow: column;
+    height: 2rem;
+  }
+  #logo {
+    margin: 0 0 0.8rem 1rem;
+    height: $card-h;
   }
 }
 
@@ -280,7 +309,7 @@ header#main-header, main {
 form.search-bar {
   margin: 0 0.5rem 0 0;
   align-self: self-end;
-  height: 1rem;
+  height: 1.5rem;
   padding: 0.25rem;
 }
 
@@ -311,7 +340,7 @@ form.search-bar button {
     max-width: 300px;
     width: 100%;
     flex-grow: 1;
-      &:hover{background-color: var(--light-gray);}
+      &:hover{background-color: var(--lightest-gray);}
       &:focus, :focus-visible, :focus-within{background-color: var(--light-gray);}
   }
   form.search-bar input[type="text"] {
@@ -331,7 +360,7 @@ form.search-bar button {
   max-height: fit-content;
   &:hover > .card {
     transition: background-color 300ms ease-out;
-    background-color: var(--light-gray);
+    background-color: var(--lightest-gray);
   }
 }
 
@@ -575,6 +604,18 @@ TODO: Instead of a breakpoint this could be a theme switch from compact to conde
   NAVIGATION
 /----------- */ 
 
+.compose-btn {
+  height: 2rem;
+
+} 
+
+.compose__link {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+}
+
 nav#primary-nav {
   height: $card-h;
   align-items: start;
@@ -593,6 +634,7 @@ nav#primary-nav ul.nav__links {
   border: none;
   padding: 0;
   margin: 1rem 0;
+  gap: 0.5rem
 }
 
 nav#primary-nav .nav__link {
@@ -602,6 +644,9 @@ nav#primary-nav .nav__link {
   border-radius: 0;
   border-bottom: 1px solid var(--border);
   width: 100%;
+  &:not(:first-child) {
+    opacity: 0.5;
+  }
 }
 
 nav#primary-nav .nav__link > a {
@@ -621,10 +666,10 @@ nav#primary-nav .nav__container {
 }
 
 @include responsize("tablet") {
-  nav#primary-nav, header#main-header {
-    align-items: end;
-    margin: 1rem 0;
-  }
+  // nav#primary-nav, header#main-header {
+  //   align-items: end;
+  //   margin: 1rem 0;
+  // }
   nav#primary-nav {
     height: auto;
     position: relative;
@@ -634,18 +679,20 @@ nav#primary-nav .nav__container {
     position: fixed;
     z-index: auto;
     width: auto;
-    margin: 1rem 0 1rem 1rem;
+    margin: 0 0 1rem 1rem;
   }
   nav#primary-nav .nav__container {
     display: none;
     visibility: hidden;
   }
   nav#primary-nav .nav__link {
+    height: auto;
     flex-grow: 1;
     border: none;
   }
   nav#primary-nav .nav__link > a {
     margin: auto auto auto 0;
+    align-items: center;
   }
 }
 
