--- a/style.scss
+++ b/style.scss
@@ -831,11 +831,11 @@ div#email__sender {
   .#{$name}-icon {
     display: block;
     background: rgb(var(--dark-gray));
-    width: 1rem;
-    height: 1rem;
+    width: 1.5rem;
+    height: 1.5rem;
     pointer-events: none;
-    -webkit-mask: $svg no-repeat center;
-    mask: $svg no-repeat center;
+    -webkit-mask: $svg no-repeat center / 24px;
+    mask: $svg no-repeat center / 24px;
   }
 }
 
