Change body background-color to prevent flash of --lightest-gray between aside opening and closing

--- a/globals.scss
+++ b/globals.scss
@@ -20,7 +20,7 @@
 }
 
 body {
-  background-color: var(--global-bg);
+  background-color: var(--offwhite);
   color: var(--text-color);
   font-optical-sizing: auto;
 }
