--- a/globals.css
+++ b/globals.css
@@ -17,7 +17,7 @@
 }
 
 body {
-  background-color: var(--global-bg);
+  background-color: var(--offwhite);
   color: var(--text-color);
   font-optical-sizing: auto;
 }
