--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,6 @@
 @use "sass:map";
-@import url("css/reset.css");
-@import 'css/_globals';
+@import url("reset.css");
+@import '_globals';
 
 body {
   display: grid;
@@ -250,6 +250,10 @@ aside {
 footer {
   align-self: end;
   padding: 1rem;
+}
+
+iframe {
+  flex-grow: 1;
 }
 
 h2, section > :first-child {
@@ -774,11 +778,11 @@ nav#primary-nav.slide-in {
   EMAIL CONTENT VIEW
 /----------- */ 
 
-#email__content-view {
-  & > * {
-    padding: 0 0.5rem;
-  }
-}
+// #email__content-view {
+//   & > * {
+//     padding: 0 0.5rem;
+//   }
+// }
 
 .email__content {
   position: fixed;
@@ -791,7 +795,6 @@ nav#primary-nav.slide-in {
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   display: flex;
   flex-direction: column;
-  gap: 1rem;
 }
 
 #email__subject {
@@ -809,6 +812,16 @@ div#email__sender {
   }
 }
 
+#sender__actions {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  display: flex;
+  flex-flow: column wrap;
+  align-content: center;
+}
+
 @media screen and (min-width: 768px) {
   .email__content {
     border-left: 1px solid var(--border);
@@ -824,7 +837,8 @@ div#email__sender {
 #sender__actions > div {
   width: fit-content;
   border: 1px solid var(--border);
-    border-radius: 0.5rem;
+  border-radius: 0.5rem;
+  background-color: var(--offwhite);
 }
 
 .actions {
